# MiniPaca

./: .gitignore  main.py  mtg.sh  pull.sh  pyproject.toml
